--- a/frontend/src/pages/Report/styles.css
+++ b/frontend/src/pages/Report/styles.css
@@ -7,10 +7,12 @@
     box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.2);
 }
 
-.report h1 {
+h1 {
     padding-top: 40px;
     padding-bottom: 20px;
-    text-align: center;
+    text-align: left;
+    font-weight: lighter;
+    color: #386796;
 }
 
 .report h2 {
@@ -31,6 +33,9 @@
     flex-wrap: wrap;
 }
 .plot-box-status{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     width: 350px;
     padding: 12px;
     -webkit-box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.48);
@@ -42,16 +47,23 @@
 }
 
 .plot-box-status .model_output{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
     width: 58%;
+    align-items: center;
 }
 
 .model-class{
     font-size: 28px;
+    font-weight: bold;
     color: white;
 }
 
 .model-proba{
-    font-size: 18px;
+    font-size: 16px;
     color: white;
 }
 
@@ -60,15 +72,30 @@
     width: 48%;
 }
 
+.plot-box-50 img{
+    max-width: 500px;
+}
+
+
+
 .plot-box-30{
     min-width: 350px;
     width: 28%;
+}
+
+.plot-box-30 img{
+    max-width: 400px;
 }
 
 .plot-box-70{
     min-width: 350px;
     width: 68%;
 }
+
+.plot-box-70 img{
+    max-width: 800px;
+}
+
 
 .box-50, .box-7030{
     display: flex;
@@ -96,7 +123,6 @@
 .plot-figure img{
     display: block;
     width: 100%;
-    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
 }
